# Monocypher.NET

./: .gitmodules  changelog.md  license.txt  readme.md
.github/workflows/: managed.yml  native.yml
ext/: CMakeLists.txt  Monocypher.def  build_monocypher_native.ps1  build_win_x86_x64_arm_arm64.cmd  readme.md
src/: Monocypher.sln  Monocypher.sln.DotSettings  dotnet-releaser.toml
src/Monocypher/: ByteBufferExtensions.cs  Monocypher.cs  Monocypher.csproj  Monocypher.generated.cs  Monocypher.props  Monocypher2.generated.cs  monocypher.cs  monocypher.generated.cs
src/Monocypher.CodeGen/: FixedArrayTypeConverter.cs  LinuxUtil.cs  Monocypher.CodeGen.csproj  Program.cs
src/Monocypher.Tests/: BufferTests.cs  Monocypher.Tests.csproj  Tests.cs
src/Monocypher.Tests/Properties/: launchSettings.json
src/Monocypher/runtimes/osx-arm64/native/: libmonocypher_native.dylib
src/Monocypher/runtimes/osx-x64/native/: libmonocypher_native.dylib
